fixed spreadsheet demo feedback issues (SHEET-241)
Add spacing between demo items
Use non-solid buttons in formatting demo
Remove extra space from upload demo
Update invoice example

--- a/src/main/webapp/VAADIN/themes/demo-theme/demo-theme.scss
+++ b/src/main/webapp/VAADIN/themes/demo-theme/demo-theme.scss
@@ -33,7 +33,7 @@ $v-gradient: false;
     color: valo-font-color($menu-background-color);
     border-style: none;
   }
-  
+
   // Sidebar links
 
   .v-slot-links {
@@ -60,6 +60,10 @@ $v-gradient: false;
   .v-tree {
     font-weight: $v-font-weight + 100;
     color: valo-font-color($menu-background-color, 0.5);
+  }
+
+  .v-tree-node {
+    padding-bottom: 10px;
   }
 
   .v-tree-node-selected {
@@ -113,10 +117,6 @@ $v-gradient: false;
     vertical-align: bottom;
     font-size: 12px;
     padding-right: 10px;
-  }
-
-  .header {
-  	margin: 20px;
   }
 
   .v-icon + span {
